--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "react-helmet": "^5.2.0",
     "react-icons": "^3.5.0",
     "react-intl": "^2.8.0",
+    "react-pose": "^4.0.8",
     "react-reveal": "^1.2.2",
+    "react-slick": "^0.24.0",
     "slash": "^2.0.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^4.2.0",
     "styled-theming": "^2.2.0"
   },
@@ -49,7 +52,6 @@
     "start": "gatsby serve"
   },
   "devDependencies": {
-    "dotenv": "^7.0.0",
-    "react-alice-carousel": "^1.14.0"
+    "dotenv": "^7.0.0"
   }
 }
